@@ -11,7 +11,13 @@ application {
     mainClass.set("org.xiaotianqi.kuaipiao.ApplicationKt")
 
     val isDevelopment: Boolean = project.ext.has("development")
-    applicationDefaultJvmArgs = listOf("-Dio.ktor.development=$isDevelopment")
+
+    applicationDefaultJvmArgs = listOf(
+        "-Dio.ktor.development=$isDevelopment",
+        "--enable-native-access=ALL-UNNAMED",
+        "--add-opens=java.base/sun.nio.ch=ALL-UNNAMED",
+        "--add-opens=java.base/jdk.internal.misc=ALL-UNNAMED"
+    )
 }
 
 dependencies {
@@ -20,7 +26,10 @@ dependencies {
     implementation(libs.bundles.monitoring)
     implementation(libs.bundles.ktor.server)
     implementation(libs.bundles.ktor.client)
+    implementation(libs.ktor.client.cio)
+    implementation(libs.koin.ktor.annotations)
     implementation(libs.bundles.di)
+    implementation(libs.bundles.ai)
     implementation(libs.bundles.kotlin)
     implementation(libs.bundles.swagger)
     implementation(libs.bundles.validation)
@@ -34,8 +43,26 @@ dependencies {
     implementation(libs.bundles.graphql)
     implementation(libs.bundles.xmlx)
     testImplementation(libs.bundles.testing)
-//    testImplementation(libs.ktor.serverTestHost)
-//    testImplementation(libs.kotlin.testJunit)
-//    testImplementation(libs.kotlin.test)
-//    testImplementation(libs.junit)
+}
+
+
+tasks.register<JavaExec>("makeMigration") {
+    group = "database"
+    description = "Generate initial PostgreSQL migration script"
+    mainClass.set("org.xiaotianqi.kuaipiao.scripts.GenerateFirstPostgresMigrationKt")
+    classpath = sourceSets["main"].runtimeClasspath
+}
+
+tasks.register<JavaExec>("migrate") {
+    group = "database"
+    description = "Ejecuta las migraciones pendientes en la base de datos"
+    classpath = sourceSets["main"].runtimeClasspath
+    mainClass.set("org.xiaotianqi.kuaipiao.scripts.RunMigrationsKt")
+}
+
+tasks.register<JavaExec>("migrateRollback") {
+    group = "database"
+    description = "Revierte la última migración aplicada (requiere confirmación)"
+    classpath = sourceSets["main"].runtimeClasspath
+    mainClass.set("org.xiaotianqi.kuaipiao.scripts.RollbackMigrationsKt")
 }
